--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,24 +7,23 @@
     %a.navbar-brand(href="/")
       = image_tag("logo.png", alt: "PROTO TYPE - SHARE THE PROTOTYPE", height: "36px")
     .navbar-collapse.collapse.navbar-responsive-collapse
-      //not login
-      %ul.nav.navbar-nav.navbar-right
-        %li
-          .btn.btn-primary.navbar-btn
-            %a{href: "/login"}
-              Get Started
-      //login
-      %ul.nav.navbar-nav.navbar-right
-        %li.dropdown
-          %a.dropdown-toggle{aria: { expanded: "false" }, data: { toggle: "dropdown" }, href: "#", role: "button"}
-            UserName
-            %span.caret
-          %ul.dropdown-menu{role: "menu"}
-            %li
-              %a{href: "#"} Profile Edit
-            %li
-              %a{href: "#"} Logout
-        %li
-          .btn.btn-primary.navbar-btn
-            %a{href: "/proto/new"}
-              New Proto
+      - if current_user
+        %ul.nav.navbar-nav.navbar-right
+          %li.dropdown
+            %a.dropdown-toggle{aria: { expanded: "false" }, data: { toggle: "dropdown" }, href: "#", role: "button"}
+              UserName
+              %span.caret
+            %ul.dropdown-menu{role: "menu"}
+              %li
+                = link_to "Profile Edit", edit_user_registration_path
+              %li
+                = link_to "Log out", destroy_user_session_path
+          %li
+            .btn.btn-primary.navbar-btn
+              %a{href: "/proto/new"}
+                New Proto
+      - else
+        %ul.nav.navbar-nav.navbar-right
+          %li
+            .btn.btn-primary.navbar-btn
+              = link_to "Get Started", new_user_registration_path
