--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -26,4 +26,4 @@
         %ul.nav.navbar-nav.navbar-right
           %li
             .btn.btn-primary.navbar-btn
-              = link_to "Get Started", new_user_registration_path
+              = link_to "Get Started", new_user_session_path
