--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,13 +11,13 @@
         %ul.nav.navbar-nav.navbar-right
           %li.dropdown
             %a.dropdown-toggle{aria: { expanded: "false" }, data: { toggle: "dropdown" }, href: "#", role: "button"}
-              UserName
+              = current_user.nickname.present? ? current_user.nickname : "UserName"
               %span.caret
             %ul.dropdown-menu{role: "menu"}
               %li
                 = link_to "Profile Edit", edit_user_registration_path
               %li
-                = link_to "Log out", destroy_user_session_path
+                = link_to "Log out", destroy_user_session_path, method: :delete
           %li
             .btn.btn-primary.navbar-btn
               %a{href: "/proto/new"}
