--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,31 +1,22 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+.container
+  = form_for resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, html: { class: "user-new"} do |f|
+    = devise_error_messages!
+    .col-md-8.col-md-offset-2
+      %header.row.user-nav.row
+        .col-md-12
+          %h2 Edit Profile
+          .field.row.user-name.col-md-10
+            = f.text_field :nickname, autofocus: true, placeholder: "New Nickname"
+          .field.user-image.col-md-2
+            %button.btn.btn-primary Change Image
+            = f.file_field :avatar
+          .field.row.user-email.col-md-12
+            = f.email_field :email, autofocus: true, placeholder: "New Email Address"
+          .field.row.user-password.col-md-12
+            = f.password_field :password, autocomplete: "off", placeholder: "New Password"
+          .field.row.user-name.col-md-12
+            = f.text_field :work, autofocus: true, placeholder: "Work"
+          .field.row.user-name.col-md-12
+            = f.text_area :profile, autofocus: true, placeholder: "Profile"
+      .actions.row.user-btn
+        = f.submit "Update", class: "btn btn-lg btn-primary btn-block"
