--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,4 +1,5 @@
-.container.footer
-  %footer
-    %hr
-    %p &copy; PROTO SPACE 2015.
+.container
+  .footer
+    %footer
+      %hr
+      %p &copy; PROTO SPACE 2015.
