--- a/app/views/prototypes/new.html.haml
+++ b/app/views/prototypes/new.html.haml
@@ -6,28 +6,41 @@
     .row
       .col-me-12
         .cover-image-upload
-          = f.fields_for :images do |images_form|
-            = images_form.file_field :image
+          = f.fields_for :images do |main_image_form|
+            = main_image_form.file_field :image
+            = main_image_form.hidden_field :status, value: :main
       .col-me-12
         %ul.proto-sub-list.list-group
-          - 3.times do |i|
-            %li.list-group-item.col-md-4.appear_form
-              .image-upload
-                = f.fields_for :images do |images_form|
-                  = images_form.file_field :image
+          %li.list-group-item.col-md-4.appear_form
+            .image-upload
+              = f.fields_for :images do |sub_images_form|
+                = sub_images_form.file_field :image
+                = sub_images_form.hidden_field :status, value: :sub
+          %li.list-group-item.col-md-4.appear_form
+            .image-upload
+              = f.fields_for :images do |sub_images_form|
+                = sub_images_form.file_field :image
+                = sub_images_form.hidden_field :status, value: :sub
+          %li.list-group-item.col-md-4.appear_form
+            .image-upload
+              = f.fields_for :images do |sub_images_form|
+                = sub_images_form.file_field :image
+                = sub_images_form.hidden_field :status, value: :sub
+
       .row.photo-description
         .col-md-12
           = f.text_field :catch_copy, placeholder: "Catch Copy"
         .col-md-12
           = f.text_area :concept, placeholder: "Concept", class: "concept-text-area"
-        -# .col-md-12
-        -#   %h4 Tag List
-        -#   .row
-        -#     .col-md-3
-        -#       = f.text_field, placeholder: "Web Design"
-        -#     .col-md-3
-        -#       = f.text_field, placeholder: "UI"
-        -#     .col-md-3
-        -#       = f.text_field, placeholder: "Application"
+        .col-md-12
+          %h4 Tag List
+          .row
+            = f.fields_for :tags do |tags_form|
+              .col-md-4
+                = tags_form.text_field :'0', placeholder: "Web Design"
+              .col-md-4
+                = tags_form.text_field :'1', placeholder: "UI"
+              .col-md-4
+                = tags_form.text_field :'2', placeholder: "Application"
       .actions.proto-btn.text-center
         = f.submit "Publish", class: "btn btn-lg btn-primary btn-block"
