自分の投稿にドロップメニューを表示した

--- a/app/assets/stylesheets/protospace.css.scss
+++ b/app/assets/stylesheets/protospace.css.scss
@@ -614,17 +614,14 @@ footer {
   }
 }
 
-.social-button-syncer {
-  margin-top: 0;
-  margin-bottom: 10px;
-  .sc-tw {
-    border-left: 1px solid #d8d8d8;
-    padding-left: 14px;
-  }
-}
-
 .likes-box {
   width: 268px;
   float: right;
   margin: 0 -1px 15px 0;
+}
+
+.drop-menu-location {
+  position: absolute;
+  top: 10px;
+  left: 20px;
 }
