--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -1,4 +1,11 @@
 .col-sm-4.col-md-3.proto-content
+  - if current_user.id == prototype.user_id
+    .dropdown.drop-menu-location
+      %button.btn.btn-default.dropdown-toggle#dropdownMenu(type="button" data-toggle="dropdown" aria-expanded="true")
+        Action
+      %ul.dropdown-menu
+        %li
+          = link_to "Edit", edit_prototype_path(prototype)
   .thumbnail
     = link_to image_tag(prototype.images.first.image), prototype_path(prototype)
     .caption
