--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -6,6 +6,8 @@
       %ul.dropdown-menu
         %li
           = link_to "Edit", edit_prototype_path(prototype)
+        %li
+          = link_to "Delete", prototype_path(prototype), method: :delete
   .thumbnail
     = link_to image_tag(prototype.images.first.image), prototype_path(prototype)
     .caption
