クラスを当てて、cssを追加した

--- a/app/views/prototypes/index.html.haml
+++ b/app/views/prototypes/index.html.haml
@@ -1,6 +1,6 @@
 .jumbotron
   .container.text-center
-    = image_tag "header_logo.png", height: "73"
+    = image_tag "header_logo.png", class: "index-prototype-image"
 .filter-nav
   .container
     .row
