--- a/app/views/prototypes/new.html.haml
+++ b/app/views/prototypes/new.html.haml
@@ -35,12 +35,12 @@
         .col-md-12
           %h4 Tag List
           .row
-            = f.fields_for :tags do |tags_form|
+            = form_for @prototype do |f|
               .col-md-4
-                = tags_form.text_field :'0', placeholder: "Web Design"
+                = text_field_tag "prototype[tag][]", "", placeholder: "Web Design"
               .col-md-4
-                = tags_form.text_field :'1', placeholder: "UI"
+                = text_field_tag "prototype[tag][]", "", placeholder: "UI"
               .col-md-4
-                = tags_form.text_field :'2', placeholder: "Application"
+                = text_field_tag "prototype[tag][]", "", placeholder: "Application"
       .actions.proto-btn.text-center
         = f.submit "Publish", class: "btn btn-lg btn-primary btn-block"
