--- a/app/views/prototypes/_edit_form.html.haml
+++ b/app/views/prototypes/_edit_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @prototype, html: { class: "container proto-new" } do |f|
+= form_for prototype, html: { class: "container proto-new" } do |f|
   .col-md-8.col-md-8.col-md-offset-2.prototype-form
     %header.row.user-nav
       .field.col-me-12
@@ -6,27 +6,13 @@
     .row
       .col-me-12
         .cover-image-upload
-          = f.fields_for :image, @images do |main_image_form|
+          = f.fields_for :images, prototype.images.main do |main_image_form|
             = main_image_form.file_field :image
             = main_image_form.hidden_field :status, value: :main
-
       .col-me-12
         %ul.proto-sub-list.list-group
-          %li.list-group-item.col-md-4.appear_form
-            .image-upload
-              = f.fields_for :images, @images do |sub_images_form|
-                = sub_images_form.file_field :image
-                = sub_images_form.hidden_field :status, value: :sub
-          %li.list-group-item.col-md-4.appear_form
-            .image-upload
-              = f.fields_for :images, @images do |sub_images_form|
-                = sub_images_form.file_field :image
-                = sub_images_form.hidden_field :status, value: :sub
-          %li.list-group-item.col-md-4.appear_form
-            .image-upload
-              = f.fields_for :images, @images do |sub_images_form|
-                = sub_images_form.file_field :image
-                = sub_images_form.hidden_field :status, value: :sub
+          = render partial: "sub_image_form", collection: @prototype.images.sub, locals: { f: f }
+
       .row.photo-description
         .col-md-12
           = f.text_field :catch_copy, placeholder: "Catch Copy"
@@ -35,12 +21,11 @@
         .col-md-12
           %h4 Tag List
           .row
-            = f.fields_for :tags do |tags_form|
-              .col-md-4
-                = tags_form.text_field :'0', placeholder: "Web Design"
-              .col-md-4
-                = tags_form.text_field :'1', placeholder: "UI"
-              .col-md-4
-                = tags_form.text_field :'2', placeholder: "Application"
+            .col-md-4
+              = text_field_tag "prototype[tag][]", "", placeholder: "Web Design"
+            .col-md-4
+              = text_field_tag "prototype[tag][]", "", placeholder: "UI"
+            .col-md-4
+              = text_field_tag "prototype[tag][]", "", placeholder: "Application"
       .actions.proto-btn.text-center
         = f.submit "Publish", class: "btn btn-lg btn-primary btn-block"
