newにもeditと同じ部分テンプレートを使用するようにした

--- a/app/views/prototypes/edit.html.haml
+++ b/app/views/prototypes/edit.html.haml
@@ -1,1 +1,1 @@
-= render partial: "edit_form", locals: { prototype: @prototype }
+= render partial: "prototype_form", locals: { prototype: @prototype }
