--- a/app/views/prototypes/_prototype_form.html.haml
+++ b/app/views/prototypes/_prototype_form.html.haml
@@ -6,12 +6,26 @@
     .row
       .col-me-12
         .cover-image-upload
-          = f.fields_for :images, prototype.images.main do |main_image_form|
-            = main_image_form.file_field :image
-            = main_image_form.hidden_field :status, value: :main
+          - if prototype.images.main.present?
+            = f.fields_for :images, prototype.images.main do |main_image_form|
+              = main_image_form.file_field :image
+              = main_image_form.hidden_field :status, value: :main
+          - else
+            = f.fields_for :images do |main_image_form|
+              = main_image_form.file_field :image
+              = main_image_form.hidden_field :status, value: :main
+
       .col-me-12
         %ul.proto-sub-list.list-group
-          = render partial: "sub_image_form", collection: @prototype.images.sub, locals: { f: f }
+          - if prototype.images.sub.present?
+            = render partial: "sub_image_form", collection: prototype.images.sub, locals: { f: f }
+          - else
+            - 3.times do
+              %li.list-group-item.col-md-4.appear_form
+                .image-upload
+                  = f.fields_for :images do |sub_images_form|
+                    = sub_images_form.file_field :image
+                    = sub_images_form.hidden_field :status, value: :sub
 
       .row.photo-description
         .col-md-12
