プロトタイプにコメント出来るようにした。 - comments_controllerの作成、編集 - ルーティングの追加 - ビューの作成、編集 - アソシエーションの定義

--- a/app/views/prototypes/show.html.haml
+++ b/app/views/prototypes/show.html.haml
@@ -34,3 +34,6 @@
         Concept
       %p
         = @prototype.concept
+
+  .row.proto-comments
+    = render partial: "comment", locals: { prototype: @prototype, comment: @comment }
