プロトタイプに紐づくコメントの一覧を表示するようにした - レイアウトの修正 - アソシエーションの定義 - コメント一覧の取得 - 表示するコメントの部分テンプレート化 - コメントの投稿フォームとの名前の競合を解決

--- a/app/views/prototypes/show.html.haml
+++ b/app/views/prototypes/show.html.haml
@@ -34,6 +34,5 @@
         Concept
       %p
         = @prototype.concept
-
   .row.proto-comments
-    = render partial: "comment", locals: { prototype: @prototype, comment: @comment }
+    = render partial: "comments", locals: { prototype: @prototype, comments: @comments, new_comment: @comment }
