--- a/app/views/prototypes/_comments.html.haml
+++ b/app/views/prototypes/_comments.html.haml
@@ -1,19 +1,17 @@
+%h4.col-md-12
+  Comments
+  %span.num
+    (#{comments.count})
 - if @prototype.comments.present?
-  %h4.col-md-12
-    Comments
-    %span.num
-      (#{comments.count})
   .col-md-8
-    .comment_list
+    .comment_list#comment_area
       = render partial: "comment", collection: comments
 - if user_signed_in?
-  .col-md-8
-    .comment_list
-    = form_for [prototype, new_comment], html: { class: "form-inline" } do |f|
-      %h4
-        Write a comment
-      .row
-        .form-group.col-md-10
-          = f.text_area :text, placeholder: "Your comment", rows: "3", class: "textform-control"
-        .form-group.col-md-2
-          = f.submit "Comment", class: "btn btn-primary"
+  = form_for [prototype, new_comment], html: { class: "form-inline" }, remote: true do |f|
+    %h4
+      Write a comment
+    .row
+      .form-group.col-md-10
+        = f.text_area :text, placeholder: "Your comment", rows: "3", class: "textform-control", id: "comment_text"
+      .form-group.col-md-2
+        = f.submit "Comment", class: "btn btn-primary"
