--- a/app/views/prototypes/_comments.html.haml
+++ b/app/views/prototypes/_comments.html.haml
@@ -6,12 +6,13 @@
   .col-md-8#comment_area
     .comment_list
       = render partial: "comment", collection: comments
-    - if user_signed_in?
-      = form_for [prototype, new_comment], html: { class: "form-inline" }, remote: true do |f|
-        %h4
-          Write a comment
-        .row
-          .form-group.col-md-10
-            = f.text_area :text, placeholder: "Your comment", rows: "3", class: "textform-control", id: "comment_text"
-          .form-group.col-md-2
-            = f.submit "Comment", class: "btn btn-primary"
+.col-md-8
+  - if user_signed_in?
+    = form_for [prototype, new_comment], html: { class: "form-inline" }, remote: true do |f|
+      %h4
+        Write a comment
+      .row
+        .form-group.col-md-10
+          = f.text_area :text, placeholder: "Your comment", rows: "3", class: "textform-control", id: "comment_text"
+        .form-group.col-md-2
+          = f.submit "Comment", class: "btn btn-primary"
