--- a/app/views/prototypes/show.html.haml
+++ b/app/views/prototypes/show.html.haml
@@ -13,10 +13,7 @@
               = @prototype.user.profile
     .col-md-6.clearfix
       .likes-box
-        %button.btn.btn-default.increment-button
-          = image_tag "icon_heart.svg"
-          LIKE
-          %span.num
+        = render partial: "likes/like", locals: { prototype: @prototype, likes: @prototype.likes, like: @like }
   .row
     .col-md-9
       = image_tag @prototype.images.first.image, class: "img-responsive"
