諸々の修正 - 部分テンプレートで渡す変数の変更 - プロトタイプの取得をプライベートメソッドにして、before_actionで呼ぶようにした - prototypes_controllerのshowアクションでユーザーがログインしていれば、ユーザーのライクを取得するようにした、それに伴い不要になったメソッドを削除した - ライクボタンの表示の条件式を変更した - ajaxで更新するビューに渡す変数の変更

--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,1 @@
-$("#like-button").html("<%= j(render partial: "likes/like", locals: { prototype: @prototype, likes: @prototype.likes, like: @like }) %>")
+$(".likes-box").html("<%= j(render partial: "like", locals: { prototype: @prototype, like: @like }) %>")
