コードを短くした

--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,1 @@
-$(".likes-box").html("<%= j(render partial: "like", locals: { prototype: @prototype, like: @like }) %>")
+$(".likes-box").html("<%= j(render "like", { prototype: @prototype, like: @like }) %>")
