--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,1 @@
-$(".likes-box").html("<%= j(render partial: "like", locals: { prototype: @prototype }) %>")
+$(".likes-box").html("<%= j(render "like", { prototype: @prototype }) %>")
