--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -4,7 +4,7 @@
       = image_tag("icon_heart.svg")
       LIKE
       %span.num#like-sum
-        = prototype.likes.count
+        = prototype.likes_count
   - else
     = button_to prototype_like_path(prototype_id: prototype.id, id: like.id), method: :delete, class: "button btn btn-default increment-button", id: "like-button", remote: true do
       = image_tag("icon_heart_red.svg")
