コメントがajaxで投稿できなくなっていたので修正した

--- a/app/views/prototypes/_comments.html.haml
+++ b/app/views/prototypes/_comments.html.haml
@@ -2,7 +2,7 @@
   Comments
   %span.num
     (#{comments.count})
-- if @prototype.comments.present?
+- if prototype.comments.present?
   .col-md-8#comment_area
     .comment_list
       = render partial: "comment", collection: comments
