--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,2 +1,2 @@
 $("#comment_text").val("");
-$("#comment_area").html("<%= j(render partial: "prototypes/comment", collection: @comments) %>")
+$("#comment_area").html("<%= j(render partial: "prototypes/comments", locals: { prototype: @prototype, comments: @prototype.comments, new_comment: @comment }) %>")
