--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,5 +1,5 @@
 - if user_signed_in?
-  - if @like.blank?
+  - if like.nil?
     = button_to prototype_likes_path(prototype), class: "button btn btn-default increment-button", id: "like-button", remote: true do
       = image_tag("icon_heart.svg")
       LIKE
@@ -10,10 +10,10 @@
       = image_tag("icon_heart_red.svg")
       LIKE
       %span.num#like-sum
-        = prototype.likes.count
+        = prototype.likes_count
 - else
   = button_to user_session_path, class: "button btn btn-default increment-button", id: "like-button" do
     = image_tag("icon_heart.svg")
     LIKE
     %span.num#like-sum
-      = prototype.likes.count
+      = prototype.likes_count
