--- a/app/views/prototypes/show.html.haml
+++ b/app/views/prototypes/show.html.haml
@@ -13,7 +13,7 @@
               = @prototype.user.profile
     .col-md-6.clearfix
       .likes-box
-        = render partial: "likes/like", locals: { prototype: @prototype, like: @like }
+        = render partial: "likes/like", locals: { prototype: @prototype, like: @prototype.user_like(current_user) }
   .row
     .col-md-9
       = image_tag @prototype.images.first.image, class: "img-responsive"
