--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -6,7 +6,7 @@
       %span.num#like-sum
         = prototype.likes_count
   - else
-    = button_to prototype_like_path(prototype_id: prototype.id, id: like.id), method: :delete, class: "button btn btn-default increment-button", id: "like-button", remote: true do
+    = button_to prototype_like_path(prototype_id: prototype, id: like), method: :delete, class: "button btn btn-default increment-button", id: "like-button", remote: true do
       = image_tag("icon_heart_red.svg")
       LIKE
       %span.num#like-sum
