prototype#indexから遷移してタグ一覧を表示するようにした - tags_controllerの追加、編集 - tags/index.html.hamlの追加、編集

--- a/app/views/prototypes/index.html.haml
+++ b/app/views/prototypes/index.html.haml
@@ -9,7 +9,7 @@
           = link_to "Popular PROTO", "#"
         %li{ role: :presentation }
           = link_to "Newest PROTO", "#"
-      = link_to "View Tags", "#", class: "btn btn-default col-lg-1"
+      = link_to "View Tags", tags_path, class: "btn btn-default col-lg-1"
 .container.proto-list
   .row
     = render @prototypes
