--- a/app/assets/stylesheets/protospace.css.scss
+++ b/app/assets/stylesheets/protospace.css.scss
@@ -635,3 +635,23 @@ footer {
 .index-prototype-image {
   height: 73px;
 }
+
+.tags-list {
+  ul {
+    overflow: hidden;
+    padding: 0;
+    margin: 30px 0;
+  }
+
+  li {
+    list-style: none;
+    margin-bottom: 10px;
+  }
+
+  a {
+    display: block;
+    text-align: center;
+    padding: 20px;
+    border-radius: 3px;
+  }
+}
