show tags of prototype - fix N + 1 proplem - add code for showing tags of prototype

--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -19,3 +19,5 @@
           = link_to "by #{prototype.user.nickname}", "#"
         .proto-posted
           = prototype.created_at.strftime("%b %d")
+      %ul.proto-tag-list.list-inline
+        = render partial: "tag", collection: prototype.tags
