fix for specifying path of partial template

--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -20,4 +20,4 @@
         .proto-posted
           = prototype.created_at.strftime("%b %d")
       %ul.proto-tag-list.list-inline
-        = render partial: "tag", collection: prototype.tags
+        = render partial: "tags/tag", collection: prototype.tags
