--- a/app/views/prototypes/index.html.haml
+++ b/app/views/prototypes/index.html.haml
@@ -8,7 +8,7 @@
         %li{ role: :presentation }
           = link_to "Popular PROTO", root_path
         %li{ role: :presentation }
-          = link_to "Newest PROTO", "#"
+          = link_to "Newest PROTO", newest_index_path
       = link_to "View Tags", tags_path, class: "btn btn-default col-lg-1"
 .container.proto-list
   .row
