--- a/app/views/prototypes/index.html.haml
+++ b/app/views/prototypes/index.html.haml
@@ -6,7 +6,7 @@
     .row
       %ul.nav.nav-pills.col-lg-11
         %li{ role: :presentation }
-          = link_to "Popular PROTO", root_path
+          = link_to "Popular PROTO", popularest_index_path
         %li{ role: :presentation }
           = link_to "Newest PROTO", newest_index_path
       = link_to "View Tags", tags_path, class: "btn btn-default col-lg-1"
