fix commented points

--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -1,4 +1,4 @@
 .container.proto-list
   .row
     %ul
-      = render partial: "prototype", collection: @prototypes
+      = render partial: @prototypes
