Delete duplicate code

--- a/app/views/prototypes/_prototype_form.html.haml
+++ b/app/views/prototypes/_prototype_form.html.haml
@@ -20,34 +20,17 @@
           - if prototype.images.sub.present?
             = render partial: "sub_image_form", collection: prototype.images.sub, locals: { f: f }
           - else
-            %li.list-group-item.col-md-4.add-image-form
-              .image-upload-plus
-                %span
-                  +
-            %li.list-group-item.col-md-4.appear_form.default-hidden
-              .image-upload.preview-uploaded-image
-                = f.fields_for :images do |sub_images_form|
-                  = sub_images_form.file_field :image, class: ".file-input preview-uploaded-image"
-                  = sub_images_form.hidden_field :status, value: :sub
-            %li.list-group-item.col-md-4#add_new_form.default-hidden.add-image-form
-              .image-upload-plus
-                %span
-                  +
-            %li.list-group-item.col-md-4.appear_form.default-hidden
-              .image-upload.preview-uploaded-image
-                = f.fields_for :images do |sub_images_form|
-                  = sub_images_form.file_field :image, class: ".file-input preview-uploaded-image"
-                  = sub_images_form.hidden_field :status, value: :sub
-            %li.list-group-item.col-md-4#add_new_form.default-hidden.add-image-form
-              .image-upload-plus
-                %span
-                  +
-            %li.list-group-item.col-md-4.appear_form.default-hidden
-              .image-upload.preview-uploaded-image
-                = f.fields_for :images do |sub_images_form|
-                  = sub_images_form.file_field :image, class: ".file-input preview-uploaded-image"
-                  = sub_images_form.hidden_field :status, value: :sub
-
+            - 3.times do
+              %li.list-group-item.col-md-4.add-image-form.default-hidden
+                .image-upload-plus
+                  %span
+                    +
+              %li.list-group-item.col-md-4.appear_form.default-hidden
+                .image-upload.preview-uploaded-image
+                  = f.fields_for :images do |sub_images_form|
+                    = sub_images_form.file_field :image, class: ".file-input preview-uploaded-image"
+                    = sub_images_form.hidden_field :status, value: :sub
+                    
       .row.photo-description
         .col-md-12
           = f.text_field :catch_copy, placeholder: "Catch Copy"
