--- a/app/views/prototypes/_prototype.html.haml
+++ b/app/views/prototypes/_prototype.html.haml
@@ -16,7 +16,7 @@
         = prototype.title
       .proto-meta
         .proto-user
-          = link_to "by #{prototype.user.nickname}", "#"
+          = link_to "by #{prototype.user.nickname}", user_path(prototype.user)
         .proto-posted
           = prototype.created_at.strftime("%b %d")
       %ul.proto-tag-list.list-inline
