--- a/app/views/prototypes/show.html.haml
+++ b/app/views/prototypes/show.html.haml
@@ -3,12 +3,12 @@
     .col-md-6
       .media
         .media-left
-          = link_to image_tag(@prototype.user.avatar, class: "media-object"), "#"
+          = link_to image_tag(@prototype.user.avatar, class: "media-object"), user_path(@prototype.user)
         .media-body
           %h4.media-heading
             = @prototype.title
           .proto-user
-            = link_to "by #{@prototype.user.nickname}", "#"
+            = link_to "by #{@prototype.user.nickname}", user_path(@prototype.user)
             %span.degree
               = @prototype.user.profile
     .col-md-6.clearfix
