Omit additional code

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -25,7 +25,7 @@
               = @user.work
 
 .container.proto-list
-  = render partial: "prototypes/prototype", collection: @prototypes
+  = render @prototypes
 
 .text-center
   = paginate @prototypes
